[package]
name = "monster"
version = "0.1.7"
authors = ["panicbit <panicbit.dev@gmail.com>"]
documentation = "https://panicbit.github.io/monster/monster/index.html"
description = "Collection of random utilities"
repository = "https://github.com/panicbit/monster"
license = "MIT"

[features]
default = []
unstable = []