[package]
name = "monster"
version = "0.1.28"
authors = ["panicbit <panicbit.dev@gmail.com>"]
documentation = "https://panicbit.github.io/monster/monster/index.html"
description = "Collection of random utilities"
repository = "https://github.com/panicbit/monster"
license = "MIT/Apache-2.0"

[features]
default = []
unstable = []

[dev-dependencies]
lazy_static = "0.1.15"
